--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,6 +1,6 @@
 <div>
   <h1>
-    Board #<%= @the_board.name %> details
+    <%= @the_board.name %> 
   </h1>
 
     
@@ -11,7 +11,7 @@
 
 <hr>
 <h2>Add a new post</h2>
-<form action="/inser_post" method="post">
+<form action="/insert_post" method="post">
   <div>
   <label for="title_field">Title</label>
   <input id="title_field" type="text" name="title">
@@ -26,7 +26,7 @@
    </div>
 
   
-  <input id="board_id_field" type="hidden" name="expire" value="<%= @the_board.id%>">
+  <input id="board_id_field" type="hidden" name="board_id" value="<%= @the_board.id%>">
  
 
    <button>
